--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -49,5 +49,8 @@
     <string name="Pandamobile">Pandamobile</string>
     <string name="detail">Detail</string>
     <string name="Terminate">Terminar</string>
+    <string name="cbedoy">Carlos Alfredo Cervantes Bedoy</string>
+    <string name="dave">David Angel Gutierrez Duron</string>
+    <string name="tito">Efrain Sanchez Vazquez</string>
 
 </resources>
