Make profile view and guy view :)

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -54,5 +54,6 @@
     <string name="tito">Efrain Sanchez Vazquez</string>
     <string name="title_activity_splash_view">SplashView</string>
     <string name="title_activity_login_view">LoginView</string>
+    <string name="title_activity_profile_view">ProfileView</string>
 
 </resources>
