--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -59,5 +59,7 @@
     <string name="title_activity_questionary_view">QuestionaryView</string>
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
+    <string name="title_activity_feed_view">FeedView</string>
+    <string name="title_activity_registration_view">RegistrationView</string>
 
 </resources>
