--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -67,5 +67,6 @@
     <string name="success">Success</string>
     <string name="loading">Loading</string>
     <string name="copyright">Apprende Mobile\nCopyright © PandaMobile</string>
+    <string name="hard_level"><![CDATA[<b>Hard</b>\nThis test contains 20 random questions about the selected topic.]]></string>
 
 </resources>
