--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -66,7 +66,7 @@
     <string name="title_activity_registration_view">Registration</string>
     <string name="success">Success</string>
     <string name="loading">Loading</string>
-    <string name="copyright">Apprende Mobile\nCopyright © PandaMobile</string>
+    <string name="copyright">Apprende Mobile\nCopyright © Panda Studios</string>
     <string name="hard_level"><![CDATA[<b>Hard</b>\nThis test contains 20 random questions about the selected topic.]]></string>
 
     <string name="very_easy">Very easy</string>
